--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -3,11 +3,11 @@
 	padding 0
 	outline none
 body
-	font-size: 
-	font-family: 
-	color 
-	background-color 
-	line-height: 
+	font-size: 20px
+	font-family: G
+	color #000
+	background-color #fff
+	line-height: auto
 a
 	color: #000
 	&:focus
@@ -25,6 +25,11 @@ header
 footer
 	width 100%
 	display block
+.wrapper
+	overflow hidden
+.content
+	position relative
+	z-index 60
 .video-wrapper
 	margin 0 auto
 	position relative
@@ -65,13 +70,13 @@ footer
 	text-align center
 	margin 0 auto
 	text-decoration none
-	color: rgb(255, 255, 255);
+	color: #fff;
 	width: 100%
 	&:focus
 		text-decoration none
-		color 
+		color #fff
 	&:hover
 		text-decoration none
-		color 
+		color #fff
 .general-title
 	text-align center
