--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -66,17 +66,24 @@ footer
 		cursor pointer
 		margin 0 auto
 .button
-	display block
+	display inline-block
 	text-align center
 	margin 0 auto
 	text-decoration none
 	color: #fff;
-	width: 100%
+	width: auto
+	text-transform uppercase
+	font-size: 14px
+	padding 20px 50px
+	background: transparent
+	border: 1px solid #fff
+	transition: all .4s ease-in-out
 	&:focus
 		text-decoration none
 		color #fff
 	&:hover
 		text-decoration none
-		color #fff
+		color #000
+		background-color #fff
 .general-title
 	text-align center
