--- a/_app/pug/base/2-footer.pug
+++ b/_app/pug/base/2-footer.pug
@@ -1,15 +1,9 @@
 footer
 	.container
-		if footer_title
-			h5 Хотите узнать больше? Вступайте в наши группы!
-			.soc-buttons
-				a(href="https://www.facebook.com/Mastervision1C/" target="_blank").soc-button-fb
-				a(href="https://vk.com/mv_akademia" target="_blank").soc-button-vk
-				a(href="https://twitter.com/MastervisionEzo" target="_blank").soc-button-tw
-				a(href="https://www.instagram.com/mastervision1/" target="_blank").soc-button-insta
-				a(href="https://www.youtube.com/channel/UCiJTdt19jRMRmYyCZac2Lvg/" target="_blank").soc-button-yt
-				a(href="https://t.me/Master_Vision_Academy" target="_blank").soc-button-tg
-				.clfix
-		p ИП Кудряшов Александр Анатольевич, Тюмень, проезд Летний, 9а, ИНН 720410077658, ОГРН 315723200065100
-		if oferta
-			a.conditions(href=oferta download) Условия возврата денежных средств
+		+img('footer-img', 'img/images/qr.png', 'QR-Code')
+		a.footer-link.footer-link-email ОТПРАВИТЬ E-MAIL
+		a.footer-link УСТАВ АНО РЦ CLEVER
+		a.footer-link Свидетельство о&nbsp;государственной регистрации
+		a.footer-link Свидетельство о&nbsp;постановке на&nbsp;налоговый учет
+		p.footer-text ОГРН
+		p.footer-text реквизиты
