--- a/css/styles.css
+++ b/css/styles.css
@@ -115,12 +115,19 @@ footer {
   margin: 0 auto;
 }
 .button {
-  display: block;
+  display: inline-block;
   text-align: center;
   margin: 0 auto;
   text-decoration: none;
   color: #fff;
-  width: 100%;
+  width: auto;
+  text-transform: uppercase;
+  font-size: 14px;
+  padding: 20px 50px;
+  background: transparent;
+  border: 1px solid #fff;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 .button:focus {
   text-decoration: none;
@@ -128,7 +135,8 @@ footer {
 }
 .button:hover {
   text-decoration: none;
-  color: #fff;
+  color: #000;
+  background-color: #fff;
 }
 .general-title {
   text-align: center;
