--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -7,7 +7,9 @@ body
 	font-family: G
 	color #000
 	background-color #fff
-	line-height: auto
+	line-height: 1.2
+	@media screen and (max-width 560px)
+		font-size: 16px
 a
 	color: #000
 	&:focus
@@ -68,7 +70,7 @@ footer
 .button
 	display inline-block
 	text-align center
-	margin 0 auto
+	margin 0
 	text-decoration none
 	color: #fff;
 	width: auto
@@ -86,4 +88,37 @@ footer
 		color #000
 		background-color #fff
 .general-title
-	text-align center
+	margin 0 0 40px 70px
+	display flex
+	align-items: center
+	justify-content: flex-start
+	flex-wrap: nowrap
+	flex-direction: row
+	// &-white
+	// 	color: #fff
+	img
+		margin-right: 30px
+	h3
+		font-size: 32px
+		font-weight: bold
+.item
+	margin-bottom: 70px
+	width 100%
+	max-width 505px
+	@media screen and (max-width 560px)
+		margin-bottom: 40px
+	&-2
+		font-size: 32px
+		@media screen and (max-width 560px)
+			font-size: 16px
+	&-blue
+		color #113080
+	&-img
+		position relative
+		top 0
+		left -49px
+		margin-bottom: 0
+	&-title
+		font-size: 32px
+		font-weight: bold
+		text-transform uppercase
