--- a/_app/styl/base/4-footer.styl
+++ b/_app/styl/base/4-footer.styl
@@ -1,11 +1,21 @@
 footer
-	padding 40px 0
+	padding 40px 0 20px
 	text-align: center
 	background-color: #fff
 	font-size: 10px
-	h5
-		font-size: 14px;
-		margin 0
+	color #7D7470
+.footer-link
+	display inline-block
+	color #7D7470
+	&-email
+		font-size: 14px
 		font-weight: bold
-	p
-		line-height: 1.3
+		color #113080
+		margin 40px 0 20px
+.footer-text
+	display block
+	color #7D7470
+	text-transform uppercase
+	width 100%
+	max-width 230px
+	margin 0 auto 20px
