Main page is adapted

--- a/_app/styl/base/4-footer.styl
+++ b/_app/styl/base/4-footer.styl
@@ -7,6 +7,8 @@ footer
 .footer-link
 	display inline-block
 	color #7D7470
+	&:focus
+		color #7D7470
 	&-email
 		font-size: 14px
 		font-weight: bold
@@ -19,3 +21,5 @@ footer
 	width 100%
 	max-width 230px
 	margin 0 auto 20px
+	font-weight: bold
+	letter-spacing: 1.5px
