--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -94,21 +94,33 @@ footer
 	justify-content: flex-start
 	flex-wrap: nowrap
 	flex-direction: row
-	// &-white
-	// 	color: #fff
+	@media screen and (max-width 991px)
+		margin-left: 0
+	@media screen and (max-width 560px)
+		flex-direction: column
+		margin 0 0 40px
+		align-items: flex-start
 	img
 		margin-right: 30px
+		@media screen and (max-width 560px)
+			margin 0 0 20px
 	h3
 		font-size: 32px
 		font-weight: bold
+		@media screen and (max-width 560px)
+			font-size: 20px
 .item
 	margin-bottom: 70px
 	width 100%
 	max-width 505px
-	@media screen and (max-width 560px)
+	@media screen and (max-width 991px)
+		max-width 100%
+	@media screen and (max-width 767px)
 		margin-bottom: 40px
 	&-2
 		font-size: 32px
+		@media screen and (max-width 767px)
+			font-size: inherit
 		@media screen and (max-width 560px)
 			font-size: 16px
 	&-blue
@@ -118,7 +130,14 @@ footer
 		top 0
 		left -49px
 		margin-bottom: 0
+		@media screen and (max-width 1199px)
+			left -40px
+		@media screen and (max-width 767px)
+			left -30px
 	&-title
 		font-size: 32px
 		font-weight: bold
 		text-transform uppercase
+		@media screen and (max-width 560px)
+			font-size: 20px
+			margin-bottom: 20px
