--- a/_app/styl/main/2-target.styl
+++ b/_app/styl/main/2-target.styl
@@ -2,8 +2,16 @@
 	background-color: #113080
 	padding 100px 0
 	color #fff
+	@media screen and (max-width 767px)
+		padding 70px 0 50px
+	@media screen and (max-width 560px)
+		padding 50px 0 20px
 .target-title
 	margin: 0 0 40px 70px
+	@media screen and (max-width 991px)
+		margin-left: 0
+	@media screen and (max-width 560px)
+		margin-bottom: 40px
 	&-img
 		display block
 		margin-bottom: 25px
@@ -11,3 +19,5 @@
 		font-size: 24px
 		font-weight: bold
 		text-transform uppercase
+		@media screen and (max-width 560px)
+			font-size: 20px
