--- a/_app/styl/main/3-for.styl
+++ b/_app/styl/main/3-for.styl
@@ -1,2 +1,6 @@
 #for
 	padding 70px 0
+	@media screen and (max-width 767px)
+		padding 70px 0 50px
+	@media screen and (max-width 560px)
+		padding 50px 0 20px
