--- a/_app/styl/main/4-projects.styl
+++ b/_app/styl/main/4-projects.styl
@@ -1,3 +1,7 @@
 #projects
-	padding 60px 0
+	padding 70px 0
 	background-color: #D9D9D9
+	@media screen and (max-width 767px)
+		padding 70px 0 50px
+	@media screen and (max-width 560px)
+		padding 50px 0 20px
