--- a/_app/styl/main/5-founders.styl
+++ b/_app/styl/main/5-founders.styl
@@ -1,13 +1,27 @@
 #founders
 	padding 70px 0
+	@media screen and (max-width 991px)
+		padding 70px 0 20px
+	@media screen and (max-width 560px)
+		padding 50px 0 0
 .founder
 	width 100%
 	max-width 520px
+	@media screen and (max-width 991px)
+		margin-bottom: 50px
+
 	&-img
 		display block
 		width 100%
 	&-title
 		font-size: 40px
 		margin 50px 0
+		@media screen and (max-width 991px)
+			margin 35px 0
+		@media screen and (max-width 560px)
+			font-size: 20px
+			margin 25px 0
 	&-text
 		font-size: 24px
+		@media screen and (max-width 560px)
+			font-size: 16px
