--- a/_app/styl/styles.min.styl
+++ b/_app/styl/styles.min.styl
@@ -4,6 +4,7 @@
 
 @import 'base/2-base'
 @import 'main/1-main'
+@import 'thanks/1-main'
 @import 'main/2-target'
 @import 'main/3-for'
 @import 'main/4-projects'
