--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -80,6 +80,10 @@ footer
 	background: transparent
 	border: 1px solid #fff
 	transition: all .4s ease-in-out
+	&&-else
+		color #10347E
+		border 1px solid #10347E
+		margin-top: 25px
 	&:focus
 		text-decoration none
 		color #fff
@@ -131,7 +135,7 @@ footer
 		left -49px
 		margin-bottom: 0
 		@media screen and (max-width 1199px)
-			left -40px
+			left -30px
 		@media screen and (max-width 767px)
 			left -30px
 	&-title
