--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,11 @@ footer {
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
+.button.button-else {
+  color: #10347e;
+  border: 1px solid #10347e;
+  margin-top: 25px;
+}
 .button:focus {
   text-decoration: none;
   color: #fff;
@@ -234,7 +239,7 @@ footer {
 }
 @media screen and (max-width: 1199px) {
   .item-img {
-    left: -40px;
+    left: -30px;
   }
 }
 @media screen and (max-width: 767px) {
@@ -308,6 +313,61 @@ footer {
 .main-title span {
   display: block;
   color: #ccc;
+}
+#thanks {
+  padding: 120px 0 50px;
+  height: 100vh;
+}
+@media screen and (max-width: 560px) {
+  #thanks {
+    padding: 150px 0 30px;
+  }
+}
+.thanks-title {
+  font-size: 32px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #113080;
+  margin-bottom: 30px;
+}
+@media screen and (max-width: 560px) {
+  .thanks-title {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+}
+.thanks-subtitle {
+  width: 50%;
+  font-size: 24px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+@media screen and (max-width: 560px) {
+  .thanks-subtitle {
+    width: 100%;
+    font-size: 18px;
+  }
+}
+.thanks-img {
+  position: absolute;
+  width: auto;
+  top: -120px;
+  left: 320px;
+}
+@media screen and (max-width: 991px) {
+  .thanks-img {
+    top: -200px;
+    left: 150px;
+  }
+}
+@media screen and (max-width: 560px) {
+  .thanks-img {
+    width: 743px;
+    left: -120px;
+    right: 0;
+    margin: 0 auto;
+    top: -220px;
+  }
 }
 #target {
   background-color: #113080;
