--- a/_app/pug/main/1-main.pug
+++ b/_app/pug/main/1-main.pug
@@ -1,13 +1,16 @@
 section#main
 	.container
 		.content
-			+img('main-img', 'img/backs/main.png', 'Облако')
+			picture.main-img
+				source(srcset=path+"img/backs/main-mob.webp  " type="image/webp" alt="Облако" media="(max-width: 560px)")
+				source(srcset=path+"img/backs/main-mob.png  " type="image/png" alt="Облако" media="(max-width: 560px)")
+				+img('', 'img/backs/main.webp', 'Облако' )
 			+img('main-logo', 'img/logo-main.svg', 'Логотип')
 			h1.main-title
 				span МИССИЯ АНО РЦ «КЛЕВЕР»
 				| РАЗВИВАЯ ВЫСШИЕ ПСИХИЧЕСКИЕ ФУНКЦИИ У ДЕТЕЙ И МОЛОДЕЖИ, СОЗДАВАТЬ ОСНОВУ ДЛЯ БУДУЩЕГО
-			.row
-				.col-md-6
-					+it('', 'img/icons/icon-blue.svg', '','Основной глобальный ориентир - Цель устойчивого развития ООН до 2030г №4 – «Качественное образование» (Обеспечение всеохватного и справедливого качественного образования, поощрение возможности обучения на протяжении всей жизни для всех)')
-				.col-md-6
-					+it('', 'img/icons/icon-blue.svg', '','Основной национальный ориентир - Национальная цель России до 2024г №2 – «Возможности для самореализации и развития талантов». Национальные проекты России «Образование» и «Культура»')
+		.row
+			.col-md-6
+				+it('', 'img/icons/icon-blue.svg', '','Основной глобальный ориентир - Цель устойчивого развития ООН до 2030г №4 – «Качественное образование» (Обеспечение всеохватного и справедливого качественного образования, поощрение возможности обучения на протяжении всей жизни для всех)')
+			.col-md-6
+				+it('', 'img/icons/icon-blue.svg', '','Основной национальный ориентир - Национальная цель России до 2024г №2 – «Возможности для самореализации и развития талантов». Национальные проекты России «Образование» и «Культура»')
