--- a/_app/styl/main/1-main.styl
+++ b/_app/styl/main/1-main.styl
@@ -24,12 +24,12 @@
 			left 120px
 		@media screen and (max-width 560px)
 			width 743px
-			left -80px
+			left -75px
 			right 0
 			margin 0 auto
-			top -260px
-		@media screen and (max-width 386px)
-			left -120px
+			top -200px
+		// @media screen and (max-width 386px)
+		// 	left -120px
 	&-title
 		font-size: 32px
 		font-weight: bold
