--- a/_app/styl/main/5-founders.styl
+++ b/_app/styl/main/5-founders.styl
@@ -9,10 +9,11 @@
 	max-width 520px
 	@media screen and (max-width 991px)
 		margin-bottom: 50px
-
 	&-img
 		display block
 		width 100%
+		img
+			width 100%
 	&-title
 		font-size: 40px
 		margin 50px 0
