--- a/_app/pug/main/2-target.pug
+++ b/_app/pug/main/2-target.pug
@@ -5,11 +5,11 @@ section#target
 			h3 Организация создана с целью развития интеллектуальных, коммуникативных и творческих способностей детей и молодежи, развития гражданского общества
 		.row
 			.col-md-6
-				+it('','img/icons/icon-white.svg', '' , 'проводим групповые и индивидуальные занятия, семинары и конкурсы, круглые столы и конференции, игры и олимпиады')
+				+it('item-480','img/icons/icon-white.svg', '' , 'проводим групповые и индивидуальные занятия, семинары и конкурсы, круглые столы и конференции, игры и олимпиады')
 			.col-md-6
-				+it('','img/icons/icon-white.svg', '' , 'осуществляем экспертное психолого-педагогическое консультирование родителей (законных представителей) и педагогических работников')
+				+it('item-480','img/icons/icon-white.svg', '' , 'осуществляем экспертное психолого-педагогическое консультирование родителей (законных представителей) и педагогических работников')
 		.row
 			.col-md-6
-				+it('','img/icons/icon-white.svg', '' , 'оказываем содействие добровольчеству и проектам популяризации всестороннего развития потенциала детей и молодежи')
+				+it('item-480','img/icons/icon-white.svg', '' , 'оказываем содействие добровольчеству и проектам популяризации всестороннего развития потенциала детей и молодежи')
 			.col-md-6
-				+it('','img/icons/icon-white.svg', '' , 'организуем просветительские мероприятия для представителей НКО с целью развития НКО-сектора и повышения компетентности его участников')
+				+it('item-480','img/icons/icon-white.svg', '' , 'организуем просветительские мероприятия для представителей НКО с целью развития НКО-сектора и повышения компетентности его участников')
