--- a/_app/pug/main/3-for.pug
+++ b/_app/pug/main/3-for.pug
@@ -3,6 +3,6 @@ section#for
 		+gt('', 'img/icons/title-icon-grey.svg', 'БЛАГОПОЛУЧАТЕЛИ')
 		.row
 			.col-md-6
-				+it('item-2', 'img/icons/icon-blue.svg', '','Дети и молодые люди в возрасте от 15 – до 35 лет')
+				+it('item-2 item-485', 'img/icons/icon-blue.svg', '','Дети и молодые люди в возрасте от 15 – до 35 лет')
 			.col-md-6
-				+it('item-2', 'img/icons/icon-blue.svg', '','Сотрудники организаций некоммерческого сектора')
+				+it('item-2 item-485', 'img/icons/icon-blue.svg', '','Сотрудники организаций некоммерческого сектора')
