--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -116,7 +116,7 @@ footer
 .item
 	margin-bottom: 70px
 	width 100%
-	max-width 505px
+	max-width 535px
 	@media screen and (max-width 991px)
 		max-width 100%
 	@media screen and (max-width 767px)
@@ -127,6 +127,14 @@ footer
 			font-size: inherit
 		@media screen and (max-width 560px)
 			font-size: 16px
+	&-480
+		max-width 480px
+		@media screen and (max-width 991px)
+			max-width 100%
+	&-455
+		max-width 455px
+		@media screen and (max-width 991px)
+			max-width 100%
 	&-blue
 		color #113080
 	&-img
@@ -145,3 +153,6 @@ footer
 		@media screen and (max-width 560px)
 			font-size: 20px
 			margin-bottom: 20px
+.mob-none
+	@media screen and (max-width 767px)
+		display none
