--- a/_app/pug/main/6-mail.pug
+++ b/_app/pug/main/6-mail.pug
@@ -31,6 +31,6 @@ section#mail
 				.checking
 					input(type="checkbox" id="check-1").check
 					label(for="check-1").check-label Я принимаю 
-						a(href="" target="_blank") условия
+						a(href="docs/conds.pdf" target="_blank") условия
 						|  передачи информации
 				button.button.button-form(type='submit') Отправить заявку
